# CookieCommander

./: Cargo.toml  README.md  config.json
.agent/skills/code-review/: SKILL.md
.agent/workflows/: build.md  code-review.md  create-pr-message.md
features/: feature list.md
features/basic-file-manager/: codereview.md  design.md  plan.md  spec.md
features/copy-delete/: design.md  plan.md  spec.md
features/file-creation-modification/: codereview.md  design.md  plan.md  spec.md
features/file-editing/: codereview.md  design.md  plan.md  spec.md
features/file-viewer/: codereview.md  design.md  plan.md  spec.md
features/prettify-json/: codereview.md  design.md  plan.md  spec.md
scripts/: dev.sh  increment_version.sh  publish.sh  release.sh
src/: main.rs  prettify.rs
src/state/: manager.rs  mod.rs  pane.rs
src/task_manager/: mod.rs
src/ui/: mod.rs  render.rs
src/vfs/: local.rs  mod.rs  traits.rs
